plugins/open-telemetry/1-echo-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      konghq.com/strip-path: "true"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"konghq.com/strip-path":"true"},"name":"echo","namespace":"default"},"spec":{"ingressClassName":"kong","rules":[{"http":{"paths":[{"backend":{"service":{"name":"echo","port":{"number":1027}}},"path":"/echo","pathType":"ImplementationSpecific"}]}}]}}
    creationTimestamp: "2024-07-30T10:17:07Z"
    generation: 1
    name: echo
    namespace: default
    resourceVersion: "2188"
    uid: 90a86b46-b1fc-4e59-89b7-25b9c2c60d28
  spec:
    ingressClassName: kong
    rules:
    - http:
        paths:
        - backend:
            service:
              name: echo
              port:
                number: 1027
          path: /echo
          pathType: ImplementationSpecific
  status:
    loadBalancer:
      ingress:
      - hostname: localhost
kind: List
metadata:
  resourceVersion: ""
